[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/InputUI/tile_0006.png" type="Texture" id=1]
[ext_resource path="res://Assets/InputUI/tile_0004.png" type="Texture" id=2]
[ext_resource path="res://Assets/InputUI/tile_0005.png" type="Texture" id=3]
[ext_resource path="res://Assets/InputUI/tile_0007.png" type="Texture" id=4]
[ext_resource path="res://UI/UISpellInput.gd" type="Script" id=5]

[node name="UISpellInput" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Center" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -46.0
margin_bottom = -46.0

[node name="NorthInput" type="TextureRect" parent="Center"]
margin_left = -8.0
margin_top = -16.0
margin_right = 8.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="NorthLabel" type="Label" parent="Center/NorthInput"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -24.0
margin_right = 20.0
margin_bottom = -10.0
text = "CAST"
align = 1

[node name="SouthInput" type="TextureRect" parent="Center"]
margin_left = -8.0
margin_top = 16.0
margin_right = 8.0
margin_bottom = 32.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="SouthLabel" type="Label" parent="Center/SouthInput"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 8.0
margin_right = 20.0
margin_bottom = 22.0
text = "CAST"
align = 1

[node name="EastInput" type="TextureRect" parent="Center"]
margin_left = 8.0
margin_right = 24.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="EastLabel" type="Label" parent="Center/EastInput"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -7.0
margin_right = 56.0
margin_bottom = 7.0
text = "CAST"

[node name="WestInput" type="TextureRect" parent="Center"]
margin_left = -24.0
margin_right = -8.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="WestLabel" type="Label" parent="Center/WestInput"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -7.0
margin_right = -16.0
margin_bottom = 7.0
text = "CAST"
align = 2
